--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,16 @@
 <title>Git</title>
     </head>
     <body>
-        <h1>Hello, World</h1>
+        <header>
+            <h1>Hello, World</h1>
+        <nav>
+            <ul>
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+            </ul>
+        </nav>
+        </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet debitis ex, beatae iure ab fugit nisi ipsa, harum 
             tempore nihil laborum officiis eos reiciendis quidem doloribus cumque. Explicabo, officia. Dignissimos.
         Voluptates accusamus minus doloremque reprehenderit esse maxime tenetur repudiandae debitis atque, molestiae id 
