modify-html-file

--- a/hello.html
+++ b/hello.html
@@ -1,24 +1,27 @@
-<html>
-    <head>
-<meta>
-<title>Git</title>
-    </head>
-    <body>
-        <header>
-            <h1>Hello, World</h1>
-        <nav>
-            <ul>
-                <li>One</li>
-                <li>Two</li>
-                <li>Three</li>
-            </ul>
-        </nav>
-        </header>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet debitis ex, beatae iure ab fugit nisi ipsa, harum 
-            tempore nihil laborum officiis eos reiciendis quidem doloribus cumque. Explicabo, officia. Dignissimos.
-        Voluptates accusamus minus doloremque reprehenderit esse maxime tenetur repudiandae debitis atque, molestiae id 
-        commodi pariatur ea laborum adipisci temporibus distinctio quasi repellat inventore ullam suscipit rerum odit accusantium dignissimos? Sequi.
-        Necessitatibus accusantium error provident ut. Magni soluta, sunt quo pariatur commodi animi quasi nam libero quos in distinctio nemo quod 
-        dolor! Nesciunt saepe asperiores ex dicta libero quisquam in? Molestiae.</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Git</title>
+</head>
+<body>
+    <header>
+        <h1>Hello, World</h1>
+    <nav>
+        <ul>
+            <li>One</li>
+            <li>Two</li>
+            <li>Three</li>
+        </ul>
+    </nav>
+    </header>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet debitis ex, beatae iure ab fugit nisi ipsa, harum 
+        tempore nihil laborum officiis eos reiciendis quidem doloribus cumque. Explicabo, officia. Dignissimos.
+    Voluptates accusamus minus doloremque reprehenderit esse maxime tenetur repudiandae debitis atque, molestiae id 
+    commodi pariatur ea laborum adipisci temporibus distinctio quasi repellat inventore ullam suscipit rerum odit accusantium dignissimos? Sequi.
+    Necessitatibus accusantium error provident ut. Magni soluta, sunt quo pariatur commodi animi quasi nam libero quos in distinctio nemo quod 
+    dolor! Nesciunt saepe asperiores ex dicta libero quisquam in? Molestiae.</p>
+</body>
 </html>
